--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "description": "txprice webpage",
   "main": "index.html",
+  "files": [ "static/*"],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
-    "build": "npx parcel build index.html",
     "deploy": "netlify deploy --prod"
   },
   "repository": {
@@ -14,8 +14,8 @@
     "url": "git+https://github.com/manifoldfinance/txprice-www.git"
   },
   "keywords": [],
-  "author": "sam",
-  "license": "ISC",
+  "author": "CommodityStream",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/manifoldfinance/txprice-www/issues"
   },
